Added wrapper for nc library

--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
     "ncodm"
   ],
   "author": "kko",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "console.table": "^0.10.0",
+    "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "nanodbc": "file:aodbc",
+    "bluebird": "^3.5.2"
+  }
 }
