--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.2",
+    "generic-pool": "^3.4.2",
+    "js-data-adapter": "^0.8.5",
     "nanodbc": "file:aodbc",
-    "bluebird": "^3.5.2"
+    "squel": "^5.12.2"
   }
 }
