Replaced map with LRU cache

--- a/js/config.json
+++ b/js/config.json
@@ -1,6 +1,7 @@
 {
     "poolSizeMin" : 3,
     "poolSizeMax" : 3,
+    "cacheSize": 10,
     "evictionInterval" : 60000,
     "dsn": "DSN=CacheWinHost"
 }
