--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "bluebird": "^3.5.2",
     "generic-pool": "^3.4.2",
+    "lru-cache": "^4.1.3",
     "nanodbc": "file:aodbc",
-    "sql": "^0.78.0",
     "winston": "^3.1.0"
   }
 }
