--- a/js/config.json
+++ b/js/config.json
@@ -3,5 +3,6 @@
     "poolSizeMax" : 3,
     "cacheSize": 10,
     "evictionInterval" : 60000,
-    "dsn": "DSN=CacheWinHost"
+    "dsn": "DSN=CacheWinHost",
+    "defaultNamespace": "SQLUser"
 }
