--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "odm",
   "version": "1.0.0",
-  "description": "ODM for nc.js",
+  "description": "FIXME",
   "main": "index.js",
   "scripts": {
     "test": "mocha test/**spec.js --reporter spec --full-trace --timeout 5000"
@@ -24,7 +24,7 @@
     "bluebird": "^3.5.2",
     "generic-pool": "^3.4.2",
     "lru-cache": "^4.1.3",
-    "nanodbc": "file:aodbc",
+    "cache-odbc": "^0.0.1",
     "winston": "^3.1.0"
   }
 }
