--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "odm",
-  "version": "1.0.0",
-  "description": "FIXME",
+  "name": "cache-persistent",
+  "version": "0.0.1",
+  "description": "Minimalistic ORM for Intersystems Cache",
   "main": "index.js",
   "scripts": {
     "test": "mocha test/**spec.js --reporter spec --full-trace --timeout 5000"
   },
   "repository": {
     "type": "git",
-    "url": "ncodm"
+    "url": "https://github.com/theconst/cache-odm.git"
   },
   "keywords": [
-    "ncodm"
+    "orm",
+    "Intersystems Cache"
   ],
-  "author": "kko",
+  "author": "TheConst",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
@@ -26,5 +27,11 @@
     "lru-cache": "^4.1.3",
     "cache-odbc": "^0.0.1",
     "winston": "^3.1.0"
-  }
+  },
+  "files": [
+    "js/**",
+    "index.js",
+    "package.json",
+    "README.MD"
+  ]
 }
