--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "bluebird": "^3.5.2",
     "generic-pool": "^3.4.2",
     "lru-cache": "^4.1.3",
-    "cache-odbc": "^0.0.1",
+    "cacheodbc": "^0.0.1",
     "winston": "^3.1.0"
   },
   "files": [
